# weiqi_pattern_search_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  shell.nix
src/: main.rs
