[package]
name = "weiqi_pattern_search_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = [ "json" ] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
weiqi_pattern = { git = "https://github.com/ddgos/weiqi_pattern", version = "0.1.0" }

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]
